# Wapiti

./: .gitignore  CMAKE_BUILD.txt  CMakeLists.txt  COPYING  HISTORY  INSTALL  Makefile  README.md  README.mkd  appveyor.yml  build.cmd  clean.cmd  init.cmd
dat/: nppattern.txt  pattern.txt  test.txt  train.txt
doc/: wapiti.1
src/: bcd.c  decoder.c  decoder.h  gradient.c  gradient.h  heap.c  heap.h  ioline.c  ioline.h  lbfgs.c  model.c  model.h  options.c  options.h  pattern.c  pattern.h  progress.c  progress.h  quark.c  quark.h  reader.c  reader.h  rprop.c  sequence.h  sgdl1.c  thread.c  thread.h  tools.c  tools.h  trainers.h  viterbi.c  viterbi.h  vmath.c  vmath.h  wapiti.c  wapiti.h
src/port/: gettimeofday.c
src/swig/: MakefileJar  build-swig-jar.cmd  compile-swig.sh  fmemopen.c  ioline.hh  wapiti.i  wapiti_wrap.cxx  wapiti_wrap.h
src/swig/fr/limsi/wapiti/: SWIGTYPE_p_mdl_t.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_void.java  Wapiti.java  WapitiIO.java  WapitiJNI.java  WapitiModel.java  opt_s.java
