# cmake -DCMAKE_BUILD_TYPE=Release -G Ninja .
# cmake -DCMAKE_BUILD_TYPE=Debug -G Ninja.

cmake_minimum_required(VERSION 2.8)
project( wapiti )

# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -gcodeview")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /D_CRT_SECURE_NO_WARNINGS")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Ot")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Qvec")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /TC")

## disable multithreaded
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /DMTH_ANSI")

set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)

AUX_SOURCE_DIRECTORY(src SOURCES)
AUX_SOURCE_DIRECTORY(src/port SOURCES)

add_executable( wapiti-cmd ${SOURCES} )
add_library( wapiti SHARED ${SOURCES} )

set(CMAKE_VERBOSE_MAKEFILE on)
